--- a/index.html
+++ b/index.html
@@ -16,125 +16,125 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="flex-container">
         <h1 class="maintext"> Madison's 2025 Holiday Wishlist</h1>
         <div class="row text-center d-flex justify-content-evenly">
             <div class="col-12 col-lg-6">
                 <div class="card mb-3">
-                    <img src="jelly.webp" class="card-img-top">
+                    <img src="bean.webp" class="bean img-fluid">
                     <div class="card-body">
                         <h5 class="card-title">Rhode Peptide Lip Tint Jelly Bean Shimmer</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card’s content.</p>
-                        <a href="https://www.rhodeskin.com/products/peptide-lip-tint-jelly-bean" target="_blank" class="btn btn-primary">Go somewhere</a>
+                        <a href="https://www.rhodeskin.com/products/peptide-lip-tint-jelly-bean" target="_blank" class="btn btn-primary">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="card mb-3">
-                    <img src="rasp.webp" class="card-img-top" alt="...">
+                    <img src="rasp.webp" class="img-fluid" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Rhode Peptide Lip Tine Raspberry Jelly</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card’s content.</p>
-                        <a href="https://www.rhodeskin.com/products/scented-peptide-lip-tint-raspberry-jelly" target="_blank" class="btn btn-primary">Go somewhere</a>
+                        <a href="https://www.rhodeskin.com/products/scented-peptide-lip-tint-raspberry-jelly" target="_blank" class="btn btn-primary">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="card mb-3">
-                    <img src="satly.webp" class="card-img-top" alt="...">
+                    <img src="salty.webp" class="img-fluid" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Rhode Peptide Lip Tine Salty </h5>
+                        <h5 class="card-title">Rhode Peptide Lip Tint Salty </h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card’s content.</p>
-                        <a href="https://www.rhodeskin.com/products/peptide-lip-tint-salty-tan" target="_blank" class="btn btn-primary">Go somewhere</a>
+                        <a href="https://www.rhodeskin.com/products/peptide-lip-tint-salty-tan" target="_blank" class="btn btn-primary">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="card mb-3">
-                    <img src="tanline.webp" class="card-img-top" alt="...">
+                    <img src="tanline.webp" class="img-fluid" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Rhode Tan Line Pocket Blush</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card’s content.</p>
-                        <a href="https://www.rhodeskin.com/products/pocket-blush-tan-line" target="_blank" class="btn btn-primary">Go somewhere</a>
+                        <a href="https://www.rhodeskin.com/products/pocket-blush-tan-line" target="_blank" class="btn btn-primary">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="..." class="img-fluid" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Rhode</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card’s content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="..." class="img-fluid" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Kendra Scott</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card’s content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="..." class="img-fluid" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Walmart AG clothes</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card’s content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="..." class="img-fluid" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card’s content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="..." class="img-fluid" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card’s content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="..." class="img-fluid" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card’s content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
                     </div>
                 </div>
             </div>
